--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,64 +1,68 @@
-@import "Color.css";
+@import 'Color.css';
 .window {
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-
-  align-items: center;
-  justify-items: center;
-  background-color: var(--bg);
+	height: 100vh;
+	width: 100vw;
+	position: relative;
+	background-color: var(--bg);
+	position: absolute;
+	bottom: 0;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
 .login_container {
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: center;
-  margin: 0 auto;
-  background-color: blue;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	background-color: red;
 }
-.textLogin {
-  color: white;
 
-  font-size: 35px;
+.textLogin {
+	text-align: center;
+	color: white;
+	padding: 30px;
+	font-size: 35px;
 }
 
 .username {
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 .password {
+	padding-bottom: 30px;
 }
 
 .textUser {
-  color: white;
-
-  bottom: 5px;
+	color: white;
+	bottom: 5px;
 }
 
 .textPass {
-  color: white;
-
-  bottom: 5px;
+	color: white;
+	bottom: 5px;
 }
 
 .userBox {
-  height: 35px;
-  width: 320px;
+	height: 35px;
+	width: 320px;
 }
 
 .passBox {
-  height: 35px;
-  width: 320px;
+	height: 35px;
+	width: 320px;
 }
 
 .login_btn_enter {
-  background-color: var(--bt);
-  text-align: center;
-  border: none;
-  height: 50px;
-  width: 250px;
-  font-size: 28px;
-  color: white;
-  font-family: "Kanit", sans-serif;
+	background-color: var(--bt);
+	text-align: center;
+	border: none;
+	height: 50px;
+	width: 250px;
+	font-size: 28px;
+	color: white;
+	font-family: 'Kanit', sans-serif;
 }
