--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,30 +1,23 @@
-@import "Color.css";
+@import 'Color.css';
 html,
 body {
-  font-family: "Kanit", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  /* flex-direction: column; */
-  align-items: center;
-  justify-items: center;
-  background-color: var(--bg);
+	font-family: 'Kanit', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 ul,
 li {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
