--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,24 +1,26 @@
+@import 'Color.css';
 .home {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgb(0, 213, 130);
-  position: relative;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgb(0, 213, 130);
+	position: relative;
+	background-color: var(--bg);
 }
 
 .logo_layout {
-  position: absolute;
-  top: 200px;
-  left: 50%;
-  transform: translateX(-50%);
+	position: absolute;
+	top: 200px;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .home_button_zone {
-  position: absolute;
-  width: 100%;
-  height: 30%;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+	position: absolute;
+	width: 100%;
+	height: 30%;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
 }
