--- a/src/components/ButtonLink/ButtonLink.css
+++ b/src/components/ButtonLink/ButtonLink.css
@@ -1,11 +1,18 @@
+@import '../../styles/Color.css';
+
 .button {
-  width: 80vw;
-  color: #fff;
-  background-color: rgb(0, 147, 227);
-  text-align: center;
-  font-size: 32px;
+	width: 90vw;
+	color: #fff;
+	background-color: var(--bt);
+	text-align: center;
+	font-size: 32px;
+	margin: 0 auto;
 }
 
 .button:active {
-  background-color: rgb(0, 80, 122);
+	background-color: var(--bt_active);
+}
+
+.button:hover {
+	background-color: var(--bt_hover);
 }
