--- a/src/styles/Agreement.css
+++ b/src/styles/Agreement.css
@@ -1,17 +1,22 @@
+@import './Color.css';
 .agreement {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(0, 213, 130);
-  padding: 40px 20px;
+	width: 100vw;
+	height: 100vh;
+	background-color: var(--bg);
+	padding: 40px 10px;
+}
+
+.agreement_text {
 }
 
 .agreement_button_zone {
-  background-color: rgb(0, 255, 178);
-  width: 100%;
-  height: 22%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 20px;
+	position: absolute;
+	width: 95%;
+	height: 30%;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	/* margin-top: 20px; */
 }
