--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@ body {
 	font-family: 'Kanit', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background-color: var(--bg);
 }
 
 * {
