--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,7 +19,28 @@
 	justify-content: space-between;
 }
 
+.main_score_container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	color: var(--bt);
+	font-size: 24px;
+	font-weight: 200;
+	margin-top: 30px;
+	background-color: rgba(255, 255, 255, 0.8);
+	width: 70%;
+	height: 6%;
+	text-align: center;
+	align-items: center;
+}
+
 .main_body_container {
+	padding-top: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+	align-items: center;
+	width: 100%;
 	height: 1000px;
 	/* background-color: antiquewhite; */
 }
@@ -38,7 +59,7 @@
 .main_footer_box {
 	display: flex;
 	justify-content: space-between;
-	padding: 3.5px;
+	padding: 3px;
 }
 
 .main_footer_button {
@@ -47,6 +68,12 @@
 	border: 0 transparent;
 	width: 18vw;
 	height: 5.8vh;
+	color: #111;
+	/* margin-top: 5px; */
+}
+
+.mfb_active {
+	color: white;
 }
 
 .number_notify {
