--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -22,6 +22,7 @@
 	margin-top: 5px;
 	padding: 5px;
 	border: none;
+	background-color: transparent;
 }
 
 .input_input:focus {
@@ -58,5 +59,7 @@
 }
 
 .testt {
+	background-color: transparent;
+	border: none;
 	width: 100%;
 }
