--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -168,7 +168,6 @@
 }
 
 .edit_profile_container {
-	padding: 10px;
 	/* background-color: red; */
 	display: flex;
 	flex-direction: column;
@@ -219,7 +218,41 @@
 }
 
 .edit_profile_footer {
-	background-color: green;
+	/* background-color: green; */
 	width: 100%;
 	height: 10vh;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.edit_profile_btn {
+	width: 40%;
+	height: 80%;
+	font-family: 'Kanit', sans-serif;
+	font-size: 20px;
+	background-color: var(--bt);
+	border: none;
+	outline: none;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.edit_profile_btn:active {
+	background-color: var(--bg2_active);
+}
+
+.upload_profile_btn {
+	font-size: 16;
+	margin-top: 10px;
+	/* background-color: red; */
+	padding: 5px;
+}
+
+.upload_profile_btn:active {
+	color: white;
+	background-color: var(--bg2_active);
 }
