--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -12,6 +12,8 @@
 	flex-direction: row;
 	background-color: white;
 	margin-top: 5px;
+	width: 100%;
+	height: 7vh;
 }
 
 .input_input {
@@ -49,7 +51,7 @@
 }
 
 .input_calendar {
-	font-size: 14px;
+	font-size: 16px;
 	position: fixed;
 	top: 200px;
 }
@@ -58,8 +60,24 @@
 	color: white;
 }
 
-.testt {
+.select_input {
 	background-color: transparent;
-	border: none;
 	width: 100%;
+	font-size: 16px;
+	font-family: 'Kanit', sans-serif;
+	border: none;
+	outline: none;
+	scroll-behavior: smooth;
+}
+
+.select_input:focus {
+	border: none;
+	outline: none;
+}
+
+.input_error_box {
+	color: rgb(138, 0, 0);
+	margin-top: 5px;
+	text-align: center;
+	/* background-color: white; */
 }
