--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -214,7 +214,7 @@
 .edit_profile_body {
 	/* background-color: pink; */
 	width: 100%;
-	height: 80vh;
+	height: 70vh;
 }
 
 .edit_profile_footer {
@@ -225,6 +225,7 @@
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
+	margin-bottom: 20px;
 }
 
 .edit_profile_btn {
