--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,88 +1,91 @@
-@import 'Color.css';
+@import "Color.css";
 .window {
-	height: 100vh;
-	width: 100vw;
-	position: relative;
-	background-color: var(--bg);
-	position: absolute;
-	bottom: 0;
-	display: flex;
-	flex-direction: column;
-	/* justify-content: space-evenly; */
-	justify-content: center;
-	align-items: center;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  background-color: var(--bg);
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .textLogin {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-	color: white;
-	padding: 60px;
-	font-size: 35px;
+  color: white;
+  padding: 40px;
+  font-size: 35px;
 }
 
 .login_container {
-	/* padding: 30px; */
-	margin-top: 40px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	/* background-color: red; */
+  /* padding: 30px; */
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  /* background-color: red; */
 }
 
 .username {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  width: 350px;
 }
 
 .password {
-	padding-bottom: 30px;
-	display: flex;
-	flex-direction: column;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+  width: 350px;
 }
 
 .textUser {
-	color: white;
-	bottom: 5px;
+  padding-right: 83%;
+  color: white;
+  bottom: 5px;
 }
 
 .textPass {
-	color: white;
-	bottom: 5px;
+  padding-right: 80%;
+  color: white;
+  bottom: 5px;
 }
 
 .userBox {
-	height: 45px;
-	width: 320px;
+  height: 30px;
+  width: 320px;
 }
 
 .passBox {
-	height: 45px;
-	width: 320px;
+  height: 45px;
+  width: 320px;
 }
 
 .login_btn_enter {
-	background-color: var(--bt);
-	text-align: center;
-	border: none;
-	height: 50px;
-	width: 320px;
-	font-size: 28px;
-	color: white;
-	font-family: 'Kanit', sans-serif;
-	margin-top: 118px;
+  background-color: var(--bt);
+  text-align: center;
+  border: none;
+  height: 50px;
+  width: 320px;
+  font-size: 28px;
+  color: white;
+  font-family: "Kanit", sans-serif;
+  margin-top: 50px;
 }
 
 .create_new_account {
-	margin-top: 30px;
-	color: white;
-	text-decoration: underline;
+  margin-top: 30px;
+  color: white;
+  text-decoration: underline;
 }
