--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -138,9 +138,10 @@
   font-size: 18px;
   /* padding-top: 5px; */
   margin: 10px;
+  /*kk*/
 }
 
 .btn_backward_global {
-	font-size: 16px;
-	/* color: #000; */
+  font-size: 16px;
+  /* color: #000; */
 }
