Do outcome friends request

--- a/src/styles/Friends/ManageRequest.css
+++ b/src/styles/Friends/ManageRequest.css
@@ -118,6 +118,11 @@
 	background-color: coral;
 }
 
+._wait {
+	background-color: cornflowerblue;
+	width: 80%;
+}
+
 .btn_action:active {
 	opacity: 50%;
 }
