--- a/phochana/src/styles/Exercises/ExerciseDeco.css
+++ b/phochana/src/styles/Exercises/ExerciseDeco.css
@@ -1,10 +1,12 @@
 @import "../Color.css";
 .windowE {
   height: 100vh;
+  width: 100vw;
 }
 
 .windowS {
   height: 95vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
@@ -33,8 +35,8 @@
 }
 
 .exerciseButton {
-  height: 100%;
-  width: 80%;
+  height: 90px;
+  width: 100px;
   background-color: var(--bt_ex);
   box-shadow: 0px;
   border: 0;
@@ -57,10 +59,13 @@
 
 .caloryCal {
   width: 100%;
-  height: 300px;
+  height: 45%;
   padding-top: 2px;
   display: flex;
   flex-direction: column;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .customers {
@@ -90,8 +95,9 @@
 }
 
 .cBox1 {
-  padding-top: 3%;
-  height: 60%;
+  padding-top: 10px;
+  height: 70%;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -102,7 +108,10 @@
 
 .cBox2 {
   /* padding-top: 10%; */
-  height: 20%;
+  height: 30%;
+  width: 350px;
+  margin: 0%;
+  padding: 0%s;
   color: white;
 }
 
@@ -112,8 +121,7 @@
 
 .timeAll {
   color: white;
-  padding-left: 5%;
-  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .fAllTime {
@@ -122,31 +130,31 @@
 }
 
 .burnAll {
-  padding-left: 10%;
+  padding-left: 5%;
 }
 
 .valBurn {
-  padding-left: 70px;
+  padding-left: 16%;
 }
 
 .cal1 {
-  padding-left: 10%;
+  padding-left: 15%;
 }
 
 .burnLeft {
-  padding-left: 10%;
+  padding-left: 5%;
 }
 
 .valLeft {
-  padding-left: 28px;
+  padding-left: 4%;
 }
 
 .cal2 {
-  padding-left: 10%;
+  padding-left: 14.5%;
 }
 
 .cTop {
-  padding-top: 30px;
+  padding-top: 5px;
 }
 
 .pickBox {
@@ -166,4 +174,10 @@
 }
 
 .timeSubmit {
+}
+
+.timeExerciseBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
