--- a/dashboard/src/components/Dashboard/FoodDisplay/fooddisplay.css
+++ b/dashboard/src/components/Dashboard/FoodDisplay/fooddisplay.css
@@ -8,18 +8,43 @@
 }
 
 .menu_container {
-	/* background-color: rgb(255, 49, 176); */
 	width: 15%;
+	height: 855px;
+	max-height: 855px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.menu_body {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	/* align-items: center; */
 	justify-items: center;
-	height: 840px;
-	max-height: 840px;
+	height: 800px;
+	max-height: 800px;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	margin-top: 10px;
-	/* margin-bottom: 10px; */
+}
+
+.add_menu {
+	background-color: rgb(0, 76, 9);
+	width: 70%;
+	height: 40px;
+	margin-top: 7px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	font-size: 16px;
+	color: white;
+}
+
+.add_menu:active {
+	opacity: 50%;
 }
 
 .menu_button {
@@ -34,6 +59,26 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-position: center; /* Center the image */
+	background-repeat: no-repeat; /* Do not repeat the image */
+	background-size: cover;
+}
+
+.menu_name {
+	z-index: 1;
+	background-color: rgb(135, 0, 0);
+	color: white;
+	font-size: 16px;
+	width: 100%;
+	height: 15%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	top: 40%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: clip;
 }
 
 .menu_button:active {
@@ -41,7 +86,7 @@
 }
 
 .menu_display {
-	background-color: red;
+	/* background-color: red; */
 	margin: 10px;
 	width: 90%;
 	display: flex;
@@ -49,4 +94,89 @@
 	align-items: center;
 	color: white;
 	font-size: 20px;
+}
+
+/* new menu */
+
+.add_new_menu_container {
+	width: 100%;
+	height: 100%;
+}
+
+.add_new_menu_header {
+	/* background-color: red; */
+	width: 100%;
+	height: 10%;
+	display: flex;
+	justify-content: left;
+}
+
+.input_menu_container {
+	margin-left: 20px;
+	width: 20%;
+	display: flex;
+	flex-direction: column;
+	/* align-items: center; */
+	justify-content: center;
+	/* background-color: black; */
+}
+
+.menu_title {
+	font-size: 16px;
+}
+
+.menu_input {
+	width: 250px;
+	height: 30px;
+}
+
+textarea:focus,
+input:focus {
+	outline: none;
+}
+
+/* menu body */
+.image_preview {
+	margin-left: 20px;
+	background-color: rgb(255, 255, 255);
+	width: 1280px;
+	height: 720px;
+	max-width: 1280px;
+	max-height: 720px;
+	min-width: 1280px;
+	min-height: 720px;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.btn_action {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 50px;
+	margin-top: 10px;
+	cursor: pointer;
+}
+
+.btn_action:active {
+	opacity: 50%;
+}
+
+.save {
+	background-color: green;
+}
+
+.cancle {
+	background-color: red;
+}
+
+.btn_container {
+	width: 100%;
+	margin: 0px 5px 0px 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
