--- a/dashboard/src/components/Dashboard/Navigation/navigation.css
+++ b/dashboard/src/components/Dashboard/Navigation/navigation.css
@@ -31,6 +31,13 @@
 	align-items: center;
 }
 
+a:hover,
+a:visited,
+a:link,
+a:active {
+	text-decoration: none;
+}
+
 .btn_navigation_left {
 	width: 85%;
 	height: 5vh;
@@ -43,6 +50,7 @@
 	font-size: 18px;
 	color: white;
 	cursor: pointer;
+	text-decoration: 'none';
 }
 
 .btn_navigation_left:active {
