--- a/dashboard/src/components/Dashboard/FoodDisplay/fooddisplay.css
+++ b/dashboard/src/components/Dashboard/FoodDisplay/fooddisplay.css
@@ -8,9 +8,10 @@
 }
 
 .menu_container {
-	width: 15%;
-	height: 855px;
-	max-height: 855px;
+	background-color: azure;
+	width: 20%;
+	height: 100%;
+	max-height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -18,13 +19,14 @@
 }
 
 .menu_body {
+	/* background-color: black; */
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	/* align-items: center; */
 	justify-items: center;
-	height: 800px;
-	max-height: 800px;
+	height: 100%;
+	max-height: 100%;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	margin-top: 10px;
@@ -35,6 +37,7 @@
 	width: 70%;
 	height: 40px;
 	margin-top: 7px;
+	margin-bottom: 7px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -48,12 +51,13 @@
 }
 
 .menu_button {
-	min-width: 200px;
-	min-height: 200px;
-	width: 200px;
-	height: 200px;
-	margin: 0 auto;
-	margin-top: 10px;
+	min-width: 15vw;
+	min-height: 15vw;
+	width: 15vw;
+	height: 15vw;
+	/* margin: 0 auto; */
+	/* margin-top: 10px; */
+	margin: 10px;
 	background-color: azure;
 	cursor: pointer;
 	display: flex;
@@ -139,12 +143,12 @@ input:focus {
 .image_preview {
 	margin-left: 20px;
 	background-color: rgb(255, 255, 255);
-	width: 1280px;
-	height: 720px;
-	max-width: 1280px;
-	max-height: 720px;
-	min-width: 1280px;
-	min-height: 720px;
+	width: 65vw;
+	height: 70vh;
+	max-width: 65vw;
+	max-height: 70vh;
+	min-width: 65vw;
+	min-height: 70vh;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
