--- a/phochana/src/styles/Register.css
+++ b/phochana/src/styles/Register.css
@@ -1,6 +1,37 @@
-.register {
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 213, 130);
-  position: relative;
+@import './Color.css';
+.register_container {
+	height: 100vh;
+	width: 100vw;
+	position: relative;
+	background-color: var(--bg);
+	position: absolute;
+	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.register_label {
+	color: white;
+	font-size: 35px;
+	margin-top: 50px;
+}
+
+.input_container {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.sub_input_container {
+	width: 90%;
+	margin-top: 10px;
+}
+
+.input_label {
+	margin-left: 20px;
+	font-size: 12px;
+	color: white;
 }
