--- a/dashboard/src/components/Dashboard/FoodDisplay/fooddisplay.css
+++ b/dashboard/src/components/Dashboard/FoodDisplay/fooddisplay.css
@@ -176,6 +176,11 @@ input:focus {
 	background-color: red;
 }
 
+.qrcode {
+	background-color: cadetblue;
+	font-size: 30px;
+}
+
 .btn_container {
 	width: 100%;
 	margin: 0px 5px 0px 10px;
