work with foodphoto

--- a/phochana/src/styles/FoodPhoto/FoodPhoto.css
+++ b/phochana/src/styles/FoodPhoto/FoodPhoto.css
@@ -77,6 +77,35 @@
 	margin-top: 10px;
 }
 
+.food_photo_name_combo_container {
+	font-family: 'Kanit', sans-serif;
+	background-color: white;
+	color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 80%;
+	height: 8vh;
+	margin-top: 10px;
+}
+
+.combo_label {
+	font-size: 14px;
+}
+
+.food_photo_name_combo_input {
+	width: 100%;
+	height: 100%;
+	font-size: 20px;
+	text-align: center;
+}
+
+.food_photo_name_combo_input:active,
+:focus {
+	border: none;
+	outline: none;
+}
+
 .food_photo_cal {
 	/* background-color: white; */
 	width: 80%;
@@ -92,7 +121,7 @@
 .food_photo_preview_container {
 	width: 100%;
 	height: 92vh;
-	margin-top: 30px;
+	/* margin-top: 10px; */
 	display: flex;
 	flex-direction: column;
 	/* justify-content: center; */
@@ -105,4 +134,95 @@
 	height: 10vh;
 	position: absolute;
 	top: 85vh;
+}
+
+.report_foodphoto {
+	width: 100%;
+	/* height: 60px; */
+	/* background-color: black; */
+	color: white;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.icon_report {
+	width: 30px;
+	height: 30px;
+	color: rgb(56, 56, 56);
+	margin-bottom: 5px;
+	/* border: 1px solid rgb(56, 56, 56); */
+	margin-right: 10px;
+	/* background-color: red; */
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 24px;
+}
+
+.icon_report:active {
+	opacity: 50%;
+}
+
+/* Photo save style*/
+
+.container_for_save {
+	/* background-color: red; */
+	margin-top: 20px;
+	display: flex;
+	justify-content: flex-end;
+	height: auto;
+	position: relative;
+	text-align: center;
+	color: white;
+}
+
+.image_box {
+	width: 100%;
+	/* margin-top: 5px; */
+}
+
+.box_label {
+	background-color: rgba(56, 56, 56, 0.2);
+	/* position: fixed; */
+	position: absolute;
+	bottom: 8px;
+	right: 16px;
+	align-items: center;
+	padding: 5px;
+}
+
+.btn_container_save {
+	/* background-color: red; */
+	display: flex;
+	flex-direction: column;
+	margin-top: 50px;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	clear: both;
+	/* position: relative; */
+	height: 40vh;
+	position: absolute;
+	bottom: 10vh;
+	/* right: 16px; */
+	/* margin-top: 20vh; */
+}
+
+.btn_s_save {
+	width: 95%;
+	height: 10vh;
+}
+
+.__save {
+	background-color: var(--bt);
+}
+
+.__share {
+	background-color: rgba(0, 55, 165, 0.2);
+}
+
+.__close {
+	/* margin-top: ; */
+	background-color: transparent;
 }
