--- a/phochana/src/components/PhotoCalendar/CalendarFood.css
+++ b/phochana/src/components/PhotoCalendar/CalendarFood.css
@@ -26,7 +26,7 @@
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	font-family: 'Kanit', sans-serif;
-	font-size: 1.03em;
+	font-size: 1em;
 }
 .react-calendar button {
 	margin: 0;
@@ -120,10 +120,83 @@
 	background-color: #e6e6e6;
 }
 
-.highlight1 {
+.bad_hightlight {
 	background-color: #d10000;
+	color: white;
 }
 
-.highlight2 {
-	background-color: #1087ff;
+.good_hightlight {
+	background-color: #10ff34;
+	color: white;
+}
+
+.warm_hightlight {
+	background-color: #e5ff00;
+	color: white;
+}
+
+/* main page */
+.calendar_food_container {
+	background-color: rgba(100, 100, 100, 0.5);
+	padding: 5px;
+	padding-top: 20px;
+	width: 100vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.show_with_calendar_container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.display_photo_all_day {
+	width: 100vw;
+	height: 20vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 15px;
+	/* background-color: red; */
+}
+
+.display_photo_container {
+	border: 2px solid #757575;
+	height: 100%;
+	max-width: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	/* background-color: #006edc; */
+}
+
+.preview_image {
+	/* background-color: green; */
+	width: 90px;
+	min-width: 90px;
+	max-width: 90px;
+	height: 90px;
+	min-height: 90px;
+	max-height: 90px;
+	margin: 10px;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.calendar_food_footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 10px;
+	color: white;
+	font-size: 14px;
+	text-align: center;
 }
