--- a/phochana/src/styles/main.css
+++ b/phochana/src/styles/main.css
@@ -3,6 +3,8 @@
 .main_container {
 	display: flex;
 	flex-direction: column;
+	width: 100%;
+	height: auto;
 }
 
 .main_header_container {
@@ -29,9 +31,10 @@
 	margin-top: 30px;
 	background-color: rgba(255, 255, 255, 0.8);
 	width: 70%;
-	height: 6%;
+	height: 10vh;
 	text-align: center;
 	align-items: center;
+	margin-bottom: 10px;
 }
 
 .main_body_container {
@@ -41,7 +44,7 @@
 	justify-items: center;
 	align-items: center;
 	width: 100%;
-	height: 1000px;
+	/* height: 1000px; */
 	/* background-color: antiquewhite; */
 }
 
