--- a/phochana/src/styles/profile.css
+++ b/phochana/src/styles/profile.css
@@ -37,7 +37,7 @@
 
 .profile_header_container {
 	width: 100%;
-	height: 50vh;
+	height: 60vh;
 	/* background-color: #000; */
 	display: flex;
 	flex-direction: column;
@@ -143,6 +143,7 @@
 }
 
 .shortcut_box_container {
+	margin-bottom: 30px;
 	padding-top: 30px;
 	/* background-color: red; */
 	width: 100%;
