--- a/phochana/src/components/ExerciseView.js/ExerciseView.css
+++ b/phochana/src/components/ExerciseView.js/ExerciseView.css
@@ -1,13 +1,25 @@
+@import '../../styles/Color.css';
 .exercise_view_container {
+	height: auto;
 	width: 100vw;
 	padding: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	margin-bottom: 40px;
 }
 
 .exercise_container {
+	background-color: var(--bt);
+	display: flex;
+	flex-direction: column;
+	/* align-items: center; */
+	/* justify-content: center; */
+	text-align: center;
+	width: 90%;
+	margin-bottom: 10px;
+	padding: 20px;
 }
 
 .exercise_container:active {
