--- a/phochana/src/components/Achievement/Achievement.css
+++ b/phochana/src/components/Achievement/Achievement.css
@@ -40,3 +40,27 @@
 	width: 70%;
 	color: white;
 }
+
+.btn__close {
+	position: fixed;
+	z-index: 2;
+	left: 0;
+	bottom: 0;
+	height: 7vh;
+	width: 100%;
+	background-color: var(--bt);
+	color: white;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	font-size: 20px;
+	align-items: center;
+}
+
+.ach_body {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
